[package]
name = "supercilex-tests"
version = "0.4.4"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
description = "Test utilities I use."
repository = "https://github.com/SUPERCILEX/supercilex-tests"
keywords = ["test-utils"]
categories = ["development-tools::testing"]
license = "Apache-2.0"

[dependencies]
clap_builder = { version = "4.4.11", default-features = false, features = ["std"], optional = true }
expect-test = { version = "1.4.1", optional = true }
public-api = { version = "0.33.1", optional = true }
rustdoc-json = { version = "0.8.8", optional = true }

[features]
default = ["api", "clap"]
api = ["dep:expect-test", "dep:public-api", "dep:rustdoc-json"]
clap = ["dep:clap_builder"]
